# todolist

./: .dockerignore  .env.dist  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  db.sql  docker-compose.yaml  pyproject.toml  setup.cfg  test.txt  test2.txt
.github/workflows/: build_deploy.yaml  build_deploy_docker_hub.yaml
apps/bot/: models.py  serializer.py  views.py
apps/bot/management/: _chat.py  _state.py
apps/bot/management/commands/: runbot.py
apps/bot/tg/: client.py
apps/core/: serializer.py  urls.py  views.py
apps/goals/: admin.py  models.py  permissions.py  serializer.py  urls.py  views.py
apps/goals/migrations/: 0001_initial.py  0002_added_goals_category_model.py  0003_added_goal_model.py  0004_added_GoalComments.py  0005_board_goalcategory_board_boardparticipant.py  0006_create_new_objects.py  0007_alter_goalcategory_board.py
core/: admin.py  models.py  serializer.py  urls.py  views.py
core/migrations/: 0001_initial.py
deploy/: .env  docker-compose-ci.yaml  docker-compose.yaml
goals/: admin.py  apps.py  models.py  serializer.py  urls.py  views.py
tests/: conftest.py  factories.py  fixtures.py  test_board_participant.py  test_categories.py
todolist/: settings.py  urls.py
